--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "ts-node index.ts",
     "build": "tsc",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "db:create": "npx dotenv -- psql -h $DB_HOST -p $DB_PORT -U $DB_USER -d postgres -c \"CREATE DATABASE mini_erp_db\"",
+    "db:init": "npm run db:create && dotenv -- psql -h $DB_HOST -p $DB_PORT -U $DB_USER -d mini_erp_db -f ./db/schema.sql"
   },
   "author": "",
   "license": "ISC",
@@ -17,8 +19,13 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "dotenv-cli": "^7.4.2",
+    "eslint": "^9.11.1",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "nodemon": "^2.0.22"
+    "typescript": "^5.6.2"
   }
 }
