--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "dev": "npm run dev:backend && npm run dev:frontend",
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm run dev"
+  },
+  "dependencies": {
+    "pg": "^8.13.0"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.11.10"
   }
 }
