--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,12 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^9.11.1",
+    "eslint-plugin-react": "^7.37.1",
+    "prettier": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
