--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts",
-    "build": "tsc",
+    "start": "ts-node dist/index.ts",
+    "build": "tsc && cp -R src/config dist/ && cp -R src/db dist/ && find dist -name '*.ts' -type f -delete",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "db:create": "npx dotenv -- psql -h $DB_HOST -p $DB_PORT -U $DB_USER -d postgres -c \"CREATE DATABASE mini_erp_db\"",
-    "db:init": "npm run db:create && dotenv -- psql -h $DB_HOST -p $DB_PORT -U $DB_USER -d mini_erp_db -f ./db/schema.sql"
+    "db:init": "npm run build && node dist/config/initDb.js",
+    "pg:start": "sudo docker-compose up -d",
+    "pg:stop": "sudo docker-compose down",
+    "pgadmin:start": "pgadmin4 --port 8080",
+    "pg:setup": "npm run pg:start && npm run db:init && npm run pgadmin:start"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +22,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
+    "@types/pg": "^8.11.10",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "dotenv-cli": "^7.4.2",
