Refactor database setup: update scripts and configuration, using docker to mount following init sql scripts

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
-DB_HOST=
-DB_PORT=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+DB_USER=admin
+DB_PASSWORD=123
+DB_NAME=mini_erp_db
+DB_PORT=5432
+PGADMIN_DEFAULT_EMAIL=admin@example.com
+PGADMIN_DEFAULT_PASSWORD=123
