--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,17 +10,26 @@ services:
       - '${DB_PORT:-5432}:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./src/db:/docker-entrypoint-initdb.d
+    networks:
+      - mynetwork
 
   pgadmin:
     image: dpage/pgadmin4:latest
     container_name: pgadmin
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@example.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@example.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
     ports:
       - '8080:80'
     depends_on:
       - postgres
+    networks:
+      - mynetwork
 
+networks:
+  mynetwork:
+  
 volumes:
   postgres_data:
+  pgadmin_data:
