--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node dist/index.ts",
-    "build": "tsc && cp -R src/config dist/ && cp -R src/db dist/ && find dist -name '*.ts' -type f -delete",
+    "start": "ts-node dist/index.js",
+    "build": "tsc",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "pg:start": "sudo docker-compose up -d",
     "pg:stop": "sudo docker-compose down",
