--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "build:frontend": "cd frontend && npm run build",
     "dev": "npm run dev:backend && npm run dev:frontend",
     "dev:backend": "cd backend && npm run dev",
-    "dev:frontend": "cd frontend && npm run dev"
+    "dev:frontend": "cd frontend && npm run dev",
+    "docker:up": "docker-compose up --build",
+    "docker:down": "docker-compose down",
+    "docker:restart": "npm run docker:down && npm run docker:up"
   },
   "dependencies": {
     "pg": "^8.13.0"
